# trading-bridge

./: .gitignore  BLOCKERS_BRAND_CLEANUP.md  BLOCKERS_DOCS.md  BLOCKERS_PHASE_2_PART_2.md  CLAUDE.md  CONVENTIONS.md  DEPLOY.md  MANUAL_INSTALL_CI_WORKFLOW.md  MORNING_REVIEW_M1M3.md  NOTES_FOR_JAYESH.md  PARSER_OPTIONS_NOTES.md  PATCH_INSTRUCTIONS_AUDIT.md  PHASE_F_COMPONENT_1_AUDIT.md  PHASE_F_COMPONENT_1_BLOCKERS.md  PHASE_F_DEVIATION_ANALYSIS.md  POLISH_PACK_1_REVIEW.md  README.md  WEBHOOK_ASYNC_NOTES.md  deploy-production.sh  docker-compose-test.yml  docker-compose.yml.backup  playwright.config.ts
backend/: .env.example  .env.production.example  .gitignore  DEPLOY_SAFETY.md  DISASTER_RECOVERY.md  Dockerfile  PATCH_INSTRUCTIONS.md  PATCH_INSTRUCTIONS_INDICATORS.md  PATCH_INSTRUCTIONS_PHASE_A.md  PATCH_INSTRUCTIONS_PHASE_B.md  PERFORMANCE_NOTES.md  PRE_DEPLOY_REVIEW.md  PRODUCTION_DEPLOY.md  README.md  TECH_DEBT_PRE_PHASE_A.md  alembic.ini  docker-compose.prod.yml  nginx.conf  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  admin_indicators.py  alerts.py  algomitra.py  analytics.py  auth.py  billing.py  brokers.py  brokers.py.404fix_20260426_162413  brokers.py.fyersfix_20260426_144150  brokers.py.statefix_20260426_155758  chart.py  chart_markers.py  deps.py  docs.py  health.py  indicator.py  indicators.py  kill_switch.py  pricing.py  role_demo.py  showcase_api.py  showcase_draft.py  strategy_positions.py  strategy_signals.py  strategy_tester.py  strategy_webhook.py  strategy_webhook.py.bak-permanent-20260507  system.py  trade_markers.py  users.py  users.py.backup_20260426_105036  webhook.py
backend/app/auth/: entitlements.py  roles.py
backend/app/backtest_extension/: __init__.py  api.py  celery_tasks.py  idempotency.py  models.py  persistence.py  rate_limit.py  schemas.py  trade_markers.py
backend/app/brokers/: __init__.py  base.py  dhan.py  dhan_historical.py  dhan_websocket.py  fyers.py  fyers.py.statefix_20260426_155758  registry.py  stubs.py
backend/app/core/: __init__.py  async_bridge.py  config.py  config.py.bak-permanent-20260507  config.py.bak-relink-20260506  exceptions.py  logging.py  performance.py  redis_client.py  security.py  security_ext.py  signal_idempotency.py  startup_checks.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/domains/: __init__.py
backend/app/middleware/: __init__.py  security.py
backend/app/observability/: __init__.py  (+5 more)
backend/data/: phase_2_part_2_template_configs.json  phase_2_template_configs.json  strategy_templates_seed.json
backend/migrations/: env.py
backend/scripts/: DHAN_INTEGRATION_TESTING.md  SHOWCASE_BACKEND_DESIGN.md  SHOWCASE_BACKTEST_SUMMARY.md  backup_postgres.sh  build_showcase_json.py  build_showcase_summary.py  deploy.sh  dhan_integration_test.py  fix_backtest_trades_schema.py  ingest_angelone_trade_list.py  ingest_backtest_trade_list.py  manual_test_phase2c_dhan_nifty50.py  phase3_seed_22_symbols_backfill.py  phase_c_prechecks.sql  restore_postgres.sh  seed_dev.py  seed_strategy_webhook.py  showcase_backtest.json  showcase_metrics.py  sign_webhook.py  verify_backup.sh  verify_bse_fut_segment.py
backend/tests/: _chart_helpers.py  conftest.py  test_admin_api.py  test_admin_indicators_api.py  test_admin_set_plan.py  test_analytics.py  test_anomaly_shield_service.py  test_async_bridge.py  test_auth_service.py  test_brain_v5.py  test_broker_interface.py  test_broker_registry.py  test_broker_stubs.py  test_celery_tasks.py  test_circuit_breaker.py  test_config.py  test_coverage_boost.py  test_coverage_round2.py  test_coverage_round3.py  test_db_session.py  test_dhan_broker.py  test_direct_exit_webhook.py  test_docker_compose.py  test_exceptions.py  test_exec_fill_confirm_limit.py  test_fyers_broker.py  test_fyers_rejection_bug4.py  test_health.py  test_kill_switch_api.py  test_kill_switch_per_strategy_fix8.py  test_kill_switch_service.py  test_lifecycle_qty_2lot.py  test_logging.py  test_main.py  test_marker_emitter.py  test_market_shield_service.py  test_models.py  test_notification_service.py  test_order_service.py  test_owner_view_subscription_isolation.py  (+36 more)
(+1780 files in other folders)
