[project]
name = "trading-bridge-backend"
version = "0.1.0"
description = "Trading Bridge backend — FastAPI trading engine and broker integrations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Jayesh Parekh" },
]

dependencies = [
    # ─── Web framework ──────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # ─── Data validation & settings ─────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # ─── Database ───────────────────────────────────────────────────────
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",

    # ─── Cache / queue ──────────────────────────────────────────────────
    "redis>=5.1.0",
    "celery>=5.4.0",

    # ─── HTTP client (broker APIs) ──────────────────────────────────────
    "httpx[http2]>=0.27.2",

    # ─── Security ───────────────────────────────────────────────────────
    "cryptography>=43.0.1",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",

    # ─── Observability ──────────────────────────────────────────────────
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "orjson>=3.10.7",

    # ─── Resilience ─────────────────────────────────────────────────────
    "tenacity>=9.0.0",

    # ─── Performance ────────────────────────────────────────────────────
    "uvloop>=0.21.0; sys_platform != 'win32'",

    # ─── Brokers ────────────────────────────────────────────────────────
    "fyers-apiv3>=3.1.0",

    # ─── Notifications ──────────────────────────────────────────────────
    "jinja2>=3.1.4",
    "boto3>=1.35.0",
    "python-telegram-bot>=21.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "types-redis>=4.6.0",
    "boto3-stubs[ses]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff (lint + format) ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy (strict type checking) ────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ─── Pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
